--- a/node/src/views/clients/layout/default.pug
+++ b/node/src/views/clients/layout/default.pug
@@ -14,10 +14,10 @@ html
     block main
 
     include ../patirals/footer.pug
-    
+    script(type="module", src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js")
     script(src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js", integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r", crossorigin="anonymous")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js", integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy", crossorigin="anonymous")
     script(src="/socket.io/socket.io.js")
     script(src="/js/socket.js") 
-    script(src="/js/chat.js") 
+    script(type="module", src="/js/chat.js") 
     script(src="/js/scrip.js") 
