--- a/node/src/views/clients/layout/default.pug
+++ b/node/src/views/clients/layout/default.pug
@@ -12,6 +12,9 @@ html
 
 
     block main
+    .chat-float-button
+      a.btn.btn-primary.chat-btn(href="/chat", data-bs-toggle="tooltip", data-bs-placement="left", title="Chat với chúng tôi")
+         i.fas.fa-comments
 
     include ../patirals/footer.pug
     script(type="module", src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js")
